# pyoslom

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
.github/workflows/: build_library.yaml  github-deploy.yml
cpp/: Makefile  dir_oslom_net_global.cpp  dir_weighted_tabdeg.cpp  directed_network.cpp  directed_oslomnet_evaluate.cpp  hierarchies.cpp  log_table.cpp  louvain_oslomnet_dir.cpp  louvain_oslomnet_undir.cpp  main_body.cpp  main_directed.cpp  main_undirected.cpp  module_collection.cpp  oslom_net_check_overlap.cpp  oslom_net_unions.cpp  oslom_python_dir.cpp  oslom_python_undir.cpp  set_parameters.cpp  try_homeless_dir.cpp  try_homeless_undir.cpp  undir_oslom_net_global.cpp  undir_weighted_tabdeg.cpp  undirected_network.cpp  undirected_oslomnet_evaluate.cpp  wsarray.cpp
cpp/standard_package/: myout.h  standard_include.h
example/: example.ipynb  example.pajek  example.py
src/oslom/: __init__.py  oslom_imp.py  run_oslom.py
src/pyoslom/: __init__.py  oslom_imp.py
tests/: oslom_test.py  test_oslom.py
